--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-scroll": "^1.8.3",
     "@types/react-typing-effect": "^2.0.2",
+    "add": "^2.0.6",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-tsparticles": "^1.34.0",
     "react-typing-effect": "^2.0.5",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
