--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-scroll": "^1.8.3",
     "@types/react-typing-effect": "^2.0.2",
     "add": "^2.0.6",
+    "axios": "^0.21.4",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
